# Telegram-Bot-Lambda

./: README.md  pyproject.toml
scripts/: build.py  dist.py  get_ca_cert.py  zip.py
src/: lambda.py
