[tool.poetry]
name = "src"
version = "1.0.0"
description = "AWS Lambda for Telegram Bot"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.69"

[tool.poetry.scripts]
build = "scripts.build:start"
cert = "scripts.get_ca_cert:start"
zip = "scripts.zip:start"
dist = "scripts.dist:start"

[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
flake8 = "^7.0.0"
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
